--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,16 @@
-click==7.1.1
+click==7.1.2
 future==0.18.2
 Jinja2==2.11.2
-joblib==0.14.1
+joblib==0.15.0
 livereload==2.6.1
-lunr==0.5.6
-Markdown==3.2.1
+lunr==0.5.8
+Markdown==3.2.2
 MarkupSafe==1.1.1
-mkdocs==1.1
-mkdocs-material==5.1.1
-mkdocs-material-extensions==1.0b2
+mkdocs==1.1.2
+mkdocs-bootswatch==1.1
 nltk==3.5
-Pygments==2.6.1
-pymdown-extensions==7.1
 PyYAML==5.3.1
-regex==2020.4.4
+regex==2020.5.14
 six==1.14.0
 tornado==6.0.4
-tqdm==4.45.0
+tqdm==4.46.0
