Added the medium activity subsection

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,5 +25,5 @@ nav:
   - Activities:
       - In-site: actv_insit.md
       - Quora: actv_quora.md
-      - Medium: actv_mdum.md
+      - Medium: actv_medum.md
   - About me: about.md
