--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
 publish = "atlasdoc"
 command = """
-pip3 install mkdocs &&
-pip3 install mkdocs-bootswatch &&
+pip3 install mkdocs-material &&
 mkdocs build -d atlasdoc
 """
